# Monopoly-UK-project

docs/: Monopoly-UK_mihalovic.docx
project/: 1_Student.cpp  1_Student.h  2_Cards.cpp  2_Cards.h  3_Methods.cpp  3_Methods.h  4_LoadCards.cpp  4_LoadCards.h  5_Semester.cpp  5_Semester.h  CMakeLists.txt  testyUloha_1.cpp  testyUloha_2.cpp  testyUloha_3.cpp  testyUloha_4.cpp  testyUloha_5.cpp
project/GoogleTest/: gtest-filepath.cc  gtest.cc
project/GoogleTest/gtest/internal/: gtest-port.h
